--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ header, .header {
     padding: 10px;
     background-color: rgb(224, 193, 245);
     margin: 10px;
+    margin-bottom: 30px;
     border-radius: 5px;
     display: grid;
     grid-template-rows: 5fr 1fr;
